# sfml_gui

./: CMakeLists.txt  README.md
src/: main.cpp
src/widget/: button.cpp  button.hpp
